--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
     "dev": "nodemon index.js",
     "build": "npm i"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,7 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
